--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@ async function fetchHistory() {
 // =============== AUTO REFRESH ===============
 setInterval(fetchData,2000);
 fetchData();
+  fetchHistory();
 </script>
 </body>
 </html>
