--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@ async function removeSchedule(index){
     body:JSON.stringify({remove_schedule:index})
   });
 }
+
 // =============== LỊCH SỬ ĐIỀU KHIỂN ===============
 async function fetchHistory() {
   try {
@@ -239,34 +240,46 @@ async function fetchHistory() {
     const body = document.getElementById('historyBody');
     body.innerHTML = '';
 
+    // Nếu không có dữ liệu
     if (!Array.isArray(history) || history.length === 0) {
       body.innerHTML = '<tr><td colspan="5">Chưa có dữ liệu</td></tr>';
       return;
     }
 
-    history.forEach(item => {
+    // Duyệt qua từng bản ghi lịch sử
+    history.forEach((item, index) => {
       const row = document.createElement('tr');
       row.innerHTML = `
         <td>${item.id}</td>
         <td>${item.mode ?? '-'}</td>
-        <td>${item.pump ? 'BẬT' : 'TẮT'}</td>
+        <td>
+          <span class="badge ${item.pump ? 'bg-success' : 'bg-danger'}">
+            ${item.pump ? 'BẬT' : 'TẮT'}
+          </span>
+        </td>
         <td>${item.pump_power ?? '-'}%</td>
         <td>${new Date(item.created_at).toLocaleString('vi-VN')}</td>
       `;
       body.appendChild(row);
     });
   } catch (err) {
-    console.error(err);
+    console.error("Lỗi tải lịch sử:", err);
+    document.getElementById('historyBody').innerHTML =
+      '<tr><td colspan="5" class="text-danger">❌ Lỗi khi tải dữ liệu</td></tr>';
   }
 }
 
-
-  
-
 // =============== AUTO REFRESH ===============
-setInterval(fetchData,2000);
-fetchData();
-  fetchHistory();
+async function refreshAll() {
+  await fetchData();
+  await fetchHistory();
+}
+
+// Cập nhật dữ liệu mỗi 3 giây
+setInterval(refreshAll, 3000);
+
+// Tải lần đầu
+refreshAll();
 </script>
 </body>
 </html>
