--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ body { background: #f5f7fa; font-family: 'Segoe UI', sans-serif; }
 <div class="row g-3 mb-3">
   <div class="col-md-3"><div class="card"><div>Chế độ hiện tại</div><div class="sensor-value" id="currentMode">-</div></div></div>
   <div class="col-md-3"><div class="card"><div>Bơm hiện tại</div><div class="sensor-value" id="pumpStatusText">-</div></div></div>
-  <div class="col-md-3"><div class="card"><div>📉 Min Threshold</div><div class="sensor-value" id="min_val">- %</div></div></div>
-  <div class="col-md-3"><div class="card"><div>📈 Max Threshold</div><div class="sensor-value" id="max_val">- %</div></div></div>
+  <div class="col-md-3"><div class="card"><div>📉 Ngưỡng Min</div><div class="sensor-value" id="min_val">- %</div></div></div>
+  <div class="col-md-3"><div class="card"><div>📈 Ngưỡng Max</div><div class="sensor-value" id="max_val">- %</div></div></div>
 </div>
 
 <div class="row g-3 mb-3">
