--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@ body { background: #f5f7fa; font-family: 'Segoe UI', sans-serif; }
 <body> 
 <div class="container py-4">
 <h1 class="fw-bold text-center mb-4">🌱 IoT Smart Garden Dashboard</h1>
+  
+<!-- Nút truy cập trực tiếp vào OTA -->
 <div class="text-center mb-4">
-  <button class="btn btn-success px-4 py-2" onclick="gotoOTA()">
+  <a href="http://192.168.1.50/update" target="_blank" class="btn btn-lg btn-success shadow-sm px-5">
     🔄 Cập nhật Firmware (OTA)
-  </button>
+  </a>
 </div>
 
 
