--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body { background: #f5f7fa; font-family: 'Segoe UI', sans-serif; }
 <!-- Nút truy cập trực tiếp vào OTA -->
 <div class="text-center mb-4">
   <a href="http://192.168.1.50/update" target="_blank" class="btn btn-lg btn-success shadow-sm px-5">
-    🔄 Cập nhật Firmware (OTA)
+    Cập nhật Firmware ESP32 (OTA)
   </a>
 </div>
 
